--- a/partners/index.html
+++ b/partners/index.html
@@ -109,6 +109,13 @@ Discord: https://discord.gg/AjdvJJRPZH</h3>
 <h3>Radon Games, an unblocked gxmes site with over 223 gxmes, and more! Play now!
 Site: https://radon-games.glitch.me/ or https://radon.cohenerickson.com/
 Discord: https://discord.gg/DRZDfZvMTw</h3>
+  
+  <h2>Imperium</h2>
+
+<h3>Imperium Has A Wide Range Of Proxy Links And Games
+
+Site: https://www.thegoat.ml
+Discord:https://discord.gg/q9FKZ4SD46</h3>
 
 
 
