--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
        
     </div> 
     <h1 style="font-size:50px">About</h1>
-    <h3>Gxme Hub is a highly advanced site with gxmes ranging from shooting gxmes, to driving gxmes and so much more! If you have a question please DM legends#7965.</h3>
+    <h3>Gxme Hub is a highly advanced site with gxmes ranging from shooting gxmes, to driving gxmes and so much more! If you have a question please DM legends#7965. Deployed By Fusion</h3>
 
   </body>
 </html>
