--- a/pxy/pxy9.html
+++ b/pxy/pxy9.html
@@ -9,7 +9,7 @@
 <button>Click now!</button>
 <script>
     var urlObj = new window.URL(window.location.href);
-    var url = "https://node8.truemyth.ml/";
+    var url = "https://thegoat.ml";
 
     if (url) {
         var win;
