--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src = "./favicon.js" defer></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" >
 <meta name="title" content="Gxme Hub">
-<meta name="description" content="Gxme Hub - the next generation of unbl*cked gxmes sites.">
+<meta name="description" content="Gxme Hub - the next generation of unbl*cked gxmes sites. Deployed By Fusion/">
 <meta name="keywords" content="gxme, gxme hub, epic, roblox unbl*cked, sealcentral, game hub, unbl*cked games, unbl*cked WTF">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
