--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div style="background-color: #2e2e2e; height:30px; border:thin solid #2e2e2e">
     </ul> 
-        <li style='padding-top:5px;padding-left:100px;text-align:center;font-family:Verdana'>Announcement: WEBSITE HAS BEEN RELEASED, PLEASE SHARE THIS WEBSITE TO EVERYONE!</li> 
+        <li style='padding-top:5px;padding-left:100px;text-align:center;font-family:Verdana'>Announcement: Deployed By Fusion#6051!</li> 
     </ul> 
 </div>
     <link rel = "stylesheet" href="./style.css"/>
