--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src = "./favicon.js" defer></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" >
 <meta name="title" content="Gxme Hub">
-<meta name="description" content="Gxme Hub - the next generation of unbl*cked gxmes sites. Deployed By Fusion/">
+<meta name="description" content= Deployed By Fusion">
 <meta name="keywords" content="gxme, gxme hub, epic, roblox unbl*cked, sealcentral, game hub, unbl*cked games, unbl*cked WTF">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -79,7 +79,7 @@
 <!-- Start of WebFreeCounter Code --> 
 <img id = "counter" src="https://hitwebcounter.com/counter/counter.php?page=8006097&style=0036&nbdigits=7&type=page&initCount=350000" border="0" alt="visitor counter"/></a>   
 <!-- End of WebFreeCounter Code -->
-      <i onclick = "location.href='https://discord.gg/9U8tHAQT43'" class="fa-brands fa-discord"></i>
+      <i onclick = "location.href='https://discord.gg/q9FKZ4SD46'" class="fa-brands fa-discord"></i>
       <i onclick = "location.href='https://www.youtube.com/channel/UCXTp8rL5fLSEKE693nYYkDQ'" class="fa-brands fa-youtube"></i>
 
   </body>
