--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <script src = "./favicon.js" defer></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" >
-<meta name="title" content="Gxme Hub">
+<meta name="title" content="Deployed By Fusion">
 <meta name="description" content= Deployed By Fusion">
 <meta name="keywords" content="gxme, gxme hub, epic, roblox unbl*cked, sealcentral, game hub, unbl*cked games, unbl*cked WTF">
 <meta name="robots" content="index, follow">
@@ -53,13 +53,11 @@
       |
       <a href="about/index.html">About</a>
       |
-      <a href="gxmes/index.html">Gxmes</a>
+      <a href="gxmes/index.html">Games</a>
       |
       <a href="emulators/index.html">Emulators</a>
       |
-      <a href="mc/index.html">MC 1.5.2</a>
-      |
-      <a href="pxy/index.html">Pr*xies</a>
+      <a href="pxy/index.html">Proxies</a>
       |
       <a href="settings/index.html">Settings</a>
       |
